<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="MAIN" Id="{2aec7386-fec2-4299-8c2e-88bb20ee3274}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	{attribute wpf [Container(Layout.Tabs)]}
	App :stPrograms;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[App.EmailSender();
App.Sorting();
App.Data();
App.TextMsg();
App.RestCall();]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>